# clob-example

./: .gitignore  Cargo.toml  miden-client.toml  test.txt
backend/: Cargo.toml
backend/order-book/: Cargo.toml
backend/order-book/src/: lib.rs  order.rs  utils.rs
backend/order-book/src/note/: mod.rs
backend/order-book/src/note/scripts/: SWAPP.masm
scripts/: SWAPp.masm
src/: cli.rs  errors.rs  lib.rs  main.rs  order.rs  utils.rs
src/commands/: demo.rs  init.rs  list.rs  mod.rs  order.rs  query.rs  setup.rs  sync.rs
src/note/: mod.rs
src/note/scripts/: P2ID.masb  SWAPP.masb  SWAPP.masm
tests/: common.rs  complete_order_fill_test.rs  main.rs  mod.rs  partial_order_note_args_test.rs  partial_order_test.rs  reclaim_partial_order_test.rs  swapp.rs
tests/common/: mod.rs
tests/script_tests/: mod.rs  swapp.rs
