[package]
name = "miden-order-book"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["vtab", "array", "bundled"]}
log = { version = "0.4.22" }
colored = { version = "2.1.0" }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8.5" }
env_logger = { version = "0.11.5" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.9" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
tonic = { version = "0.12.3" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3" }
rand_chacha = "0.3.1"
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client", branch = "next" ,features = ["concurrent", "testing", "sqlite", "tonic"] }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false, features = ["testing", "concurrent"]  }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false, features = ["testing"]  }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false, features = ["testing"] }
